--- a/style.css
+++ b/style.css
@@ -3,3 +3,44 @@ body {
   height: 100%;
   margin: 0;
 }
+h1{
+  color: red;
+  text-align: center;
+}
+img{
+  margin: auto;
+padding: 50px;
+}
+a{
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color:grey;
+  display: inline-block;
+  
+
+
+  
+
+
+}
+figcaption{
+  font-size: x-small;
+  margin: auto;
+}
+#featured-property{
+  width:  800px;
+  margin: auto;
+}
+p{
+  padding: 30px;
+}
+#details{
+  
+}
+div{
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
